--- a/package.json
+++ b/package.json
@@ -1,18 +1,51 @@
 {
   "name": "nomw",
   "version": "0.1.0",
-  "description": "NOMW for Windows.",
-  "main": "src/index.js",
+  "description": "NOMW multi-platform.",
+  "main": "src/entry.js",
   "scripts": {
-    "start": "node src/index",
-    "build": "pkg"
+    "start": ".\\dist\\binaries\\nomw-win.exe",
+    "start:macos": "concurrently \"chmod +x ./dist/binaries/nom-macos\" \"./dist/binaries/nom-macos\"",
+    "start:linux": "concurrently \"chmod +x ./dist/binaries/nom-linux\" \"./dist/binaries/nom-linux\"",
+    "start:node": "node .",
+    "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint src/**/*.js --fix",
+    "build": "gulp build",
+    "build:debug": "cross-env DEBUG=true npm run build"
   },
-  "bin": "src/index.js",
-  "keywords": [],
+  "bin": "dist/entry.js",
+  "repository": "FNCxPro/nomw",
+  "keywords": [
+    "malware"
+  ],
   "author": "Relative",
   "license": "ISC",
+  "pkg": {
+    "scripts": "dist/**/*.js",
+    "assets": "dist/**/*.json"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.36",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/preset-env": "^7.0.0-beta.36",
+    "concurrently": "^3.5.1",
+    "cross-env": "^5.1.3",
+    "del": "^3.0.0",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^8.0.0-beta.0",
+    "gulp-eslint": "^4.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-ignore": "^2.0.2",
+    "gulp-minify": "^2.1.0",
     "pkg": "^4.3.0-beta.5"
+  },
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "klaw-sync": "^3.0.2",
+    "ms": "^2.1.1"
   },
   "publishConfig": {
     "registry": "http://192.168.7.250:8081/repository/npm-private/"
